--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   },
   "dependencies": {
     "async": "~0.9.0",
-    "socket.io-client": "^1.3.5",
-    "libxmljs": "~0.18.0",
-    "sqlite3": "3.1.8",
-    "google-translate-api": "teamsteamdev/google-translate-api",
+    "bufferutil": "^3.0.1",
+    "cleverbot-node": "",
+    "discord.js": "^11.1.0",
     "express": "~4.4.1",
-    "socket.io": "^1.4.5",
-    "jade": "~1.3.1",
     "forever-monitor": "~1.2.3",
+    "google-translate-api": "teamsteamdev/google-translate-api",
     "irc": "~0.3.9",
+    "jade": "~1.3.1",
+    "libxmljs": "~0.18.0",
     "limiter": "~1.0.5",
-    "cleverbot-node": ""
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.3.5",
+    "sqlite3": "3.1.8"
   }
 }
