--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "limiter": "~1.0.5",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.3.5",
-    "sqlite3": "3.1.8"
+    "sqlite3": "3.1.8",
+    "webhook-discord": "^2.0.6"
   }
 }
