--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "~0.9.0",
     "bufferutil": "^3.0.1",
+    "circular-json": "^0.3.1",
     "cleverbot-node": "",
     "discord.js": "^11.1.0",
     "express": "~4.4.1",
