--- a/package.json
+++ b/package.json
@@ -6,23 +6,21 @@
   },
   "dependencies": {
     "async": "~0.9.0",
-
     "bufferutil": "^3.0.1",
     "circular-json": "^0.3.1",
     "cleverbot-node": "",
     "discord.js": "^11.1.0",
-
-    "socket.io-client": "^2.0.3",
-    "libxmljs": "~0.18.0",
-    "sqlite3": "3.1.8",
-    "google-translate-api": "teamsteamdev/google-translate-api",
     "express": "~4.4.1",
-    "socket.io": "^2.0.3",
-    "jade": "~1.3.1",
-
     "forever-monitor": "~1.2.3",
+    "google-translate-api": "teamsteamdev/google-translate-api",
     "irc": "~0.3.9",
+    "jade": "~1.3.1",
+    "libxmljs": "~0.18.0",
     "limiter": "~1.0.5",
+    "request": "^2.88.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
+    "sqlite3": "3.1.8",
     "webhook-discord": "^2.0.6"
   }
 }
